--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
 </head>
 
 <body>
-
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+        <div class="help">
+            <a href="#">FAQs</a>
+            <span></span>
+            <a href="#">Help</a>
+            <span></span>
+            <a href="#">Support</a>
+        </div>
+        <div class="socials">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+    </div>
+    <!-- End Top Bar -->
 </body>
 
 </html>
