Added the working hours bar

--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
         </div>
     </div>
     <!-- End Top Bar -->
+    <!-- Start Working Hours -->
+    <div class="work">
+        <div class="logo">
+            Pet<span>Lover</span>
+        </div>
+        <div class="hours">
+            <div class="col">
+                <h6>Opening Hours</h6>
+                <p>8.00AM - 9.00PM</p>
+            </div>
+            <div class="col">
+                <h6>Email US</h6>
+                <p>info@example.com</p>
+            </div>
+            <div class="col">
+                <h6>Call US</h6>
+                <p>+012 345 6789</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Working Hours -->
 </body>
 
 </html>
