--- a/index.html
+++ b/index.html
@@ -61,6 +61,27 @@
         </div>
     </div>
     <!-- End Working Hours -->
+
+    <!-- Start Header -->
+    <header>
+        <ul>
+            <li><a href="#" class="active">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">service</a></li>
+            <li><a href="#">price</a></li>
+            <li><a href="#">booking</a></li>
+            <li><a href="#">pages</a></li>
+            <li><a href="#">contact</a></li>
+        </ul>
+        <button>get quote</button>
+        <h1>Safety<span>First</span></h1>
+        <div class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </header>
+    <!-- End Header -->
 </body>
 
 </html>
