Added The landing Section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,26 @@
         </div>
     </header>
     <!-- End Header -->
+    <!-- Start Landing -->
+    <div class="landing">
+        <div class="content">
+            <div class="image">
+                <img src="./Photos/carousel-1.jpg" alt="landing">
+            </div>
+            <div class="text">
+                <h3>Best Pet Services</h3>
+                <h1>Keep Your Pet Happy</h1>
+                <h5>Duo nonumy et dolor tempor no et. Diam sit diam sit diam erat</h5>
+                <div class="links">
+                    <a href="#">book now</a>
+                    <a href="#">learn more</a>
+                </div>
+            </div>
+            <i class="fa-solid fa-angle-left"></i>
+            <i class="fa-solid fa-angle-right"></i>
+        </div>
+    </div>
+    <!-- End Landing -->
 </body>
 
 </html>
