Added the Booking Section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,63 @@
         </div>
     </div>
     <!-- End Landing -->
+    <!-- Start Booking -->
+    <div class="book">
+        <div class="re">
+            <form action="">
+                <input type="text" name="name" placeholder="Your Name">
+                <input type="email" name="email" placeholder="Your Email">
+                <input placeholder="Reservation Date" type="text" onfocus="(this.type='date')">
+                <input placeholder="Reservation Time" type="text" onfocus="(this.type='time')">
+                <select name="service">
+                    <option value="" disabled selected>Select A Service</option>
+                    <option value="">Service 1</option>
+                    <option value="">Service 2</option>
+                    <option value="">Service 3</option>
+                </select>
+                <input type="submit" value="Book Now">
+            </form>
+        </div>
+        <div class="ads">
+            <div class="title">
+                <h4>Going for a vacation?</h4>
+                <h1>Book For <span>Your Pet</span></h1>
+                <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
+
+            </div>
+            <div class="ads-content">
+                <div class="ad">
+                    <div class="label">
+                        <img src="./Photos/dog-house.png" alt="photo" width="40px">
+                        <h5>Pet Boarding</h5>
+                    </div>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                </div>
+                <div class="ad">
+                    <div class="label">
+                        <img src="./Photos/pet-bowl.png" alt="photo" width="40px">
+                        <h5>Pet Feeding</h5>
+                    </div>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                </div>
+                <div class="ad">
+                    <div class="label">
+                        <img src="./Photos/grooming.png" alt="photo" width="40px">
+                        <h5>Pet Grooming</h5>
+                    </div>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                </div>
+                <div class="ad">
+                    <div class="label">
+                        <img src="./Photos/mouse-toy.png" alt="photo" width="40px">
+                        <h5>Pet Tranning</h5>
+                    </div>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Booking -->
 </body>
 
 </html>
