Added the About Section

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     <header>
         <ul>
             <li><a href="#" class="active">home</a></li>
-            <li><a href="#">about</a></li>
+            <li><a href="#about">about</a></li>
             <li><a href="#">service</a></li>
             <li><a href="#">price</a></li>
-            <li><a href="#">booking</a></li>
+            <li><a href="#booking">booking</a></li>
             <li><a href="#">pages</a></li>
             <li><a href="#">contact</a></li>
         </ul>
@@ -103,7 +103,7 @@
     </div>
     <!-- End Landing -->
     <!-- Start Booking -->
-    <div class="book">
+    <div class="book" id="booking">
         <div class="re">
             <form action="">
                 <input type="text" name="name" placeholder="Your Name">
@@ -129,28 +129,28 @@
             <div class="ads-content">
                 <div class="ad">
                     <div class="label">
-                        <img src="./Photos/dog-house.png" alt="photo" width="40px">
+                        <img src="./Photos/dog-house.png" alt="photo">
                         <h5>Pet Boarding</h5>
                     </div>
                     <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                 </div>
                 <div class="ad">
                     <div class="label">
-                        <img src="./Photos/pet-bowl.png" alt="photo" width="40px">
+                        <img src="./Photos/pet-bowl.png" alt="photo">
                         <h5>Pet Feeding</h5>
                     </div>
                     <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                 </div>
                 <div class="ad">
                     <div class="label">
-                        <img src="./Photos/grooming.png" alt="photo" width="40px">
+                        <img src="./Photos/grooming.png" alt="photo">
                         <h5>Pet Grooming</h5>
                     </div>
                     <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
                 </div>
                 <div class="ad">
                     <div class="label">
-                        <img src="./Photos/mouse-toy.png" alt="photo" width="40px">
+                        <img src="./Photos/mouse-toy.png" alt="photo">
                         <h5>Pet Tranning</h5>
                     </div>
                     <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
@@ -159,6 +159,37 @@
         </div>
     </div>
     <!-- End Booking -->
+    <!-- Start About -->
+    <div class="about" id="about">
+        <div class="text">
+            <h4>About Us</h4>
+            <h1>Boarding <span>&</span> <span>Daycare</span></h1>
+            <h5>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat
+                vero sit.</h5>
+            <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut
+                vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+            <ul>
+                <li>
+                    <h5>best in industry</h5>
+                </li>
+                <li>
+                    <h5>emergency</h5>
+                </li>
+                <li>
+                    <h5>24/7 customer support</h5>
+                </li>
+            </ul>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="photos">
+            <img src="./Photos/about-1.jpg" alt="photo">
+            <div class="tog">
+                <img src="./Photos/about-2.jpg" alt="photo">
+                <img src="./Photos/about-3.jpg" alt="photo">
+            </div>
+        </div>
+    </div>
+    <!-- End About -->
 </body>
 
 </html>
