Fixed the media for the site

--- a/index.html
+++ b/index.html
@@ -42,26 +42,28 @@
     <!-- End Top Bar -->
     <!-- Start Working Hours -->
     <div class="work">
-        <div class="logo">
-            Pet<span>Lover</span>
-        </div>
-        <div class="hours">
-            <div class="col">
-                <h6>Opening Hours</h6>
-                <p>8.00AM - 9.00PM</p>
+        <div class="container">
+            <div class="logo">
+                Pet<span>Lover</span>
             </div>
-            <div class="col">
-                <h6>Email US</h6>
-                <p>info@example.com</p>
+            <div class="hours">
+                <div class="col">
+                    <h6>Opening Hours</h6>
+                    <p>8.00AM - 9.00PM</p>
+                </div>
+                <div class="col">
+                    <h6>Email US</h6>
+                    <p>info@example.com</p>
+                </div>
+                <div class="col">
+                    <h6>Call US</h6>
+                    <p>+012 345 6789</p>
+                </div>
             </div>
-            <div class="col">
-                <h6>Call US</h6>
-                <p>+012 345 6789</p>
-            </div>
+
         </div>
     </div>
     <!-- End Working Hours -->
-
     <!-- Start Header -->
     <header>
         <ul>
@@ -161,32 +163,38 @@
     <!-- End Booking -->
     <!-- Start About -->
     <div class="about" id="about">
-        <div class="text">
-            <h4>About Us</h4>
-            <h1>Boarding <span>&</span> <span>Daycare</span></h1>
-            <h5>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat
-                vero sit.</h5>
-            <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut
-                vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
-            <ul>
-                <li>
-                    <h5>best in industry</h5>
-                </li>
-                <li>
-                    <h5>emergency</h5>
-                </li>
-                <li>
-                    <h5>24/7 customer support</h5>
-                </li>
-            </ul>
-            <a href="#">Learn More</a>
-        </div>
-        <div class="photos">
-            <img src="./Photos/about-1.jpg" alt="photo">
-            <div class="tog">
-                <img src="./Photos/about-2.jpg" alt="photo">
-                <img src="./Photos/about-3.jpg" alt="photo">
+        <div class="container">
+            <div class="text">
+                <h4>About Us</h4>
+                <h1>Boarding <span>&</span> <span>Daycare</span></h1>
+                <h5>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit
+                    erat
+                    vero sit.</h5>
+                <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit
+                    ut
+                    vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo
+                </p>
+                <ul>
+                    <li>
+                        <h5>best in industry</h5>
+                    </li>
+                    <li>
+                        <h5>emergency</h5>
+                    </li>
+                    <li>
+                        <h5>24/7 customer support</h5>
+                    </li>
+                </ul>
+                <a href="#">Learn More</a>
             </div>
+            <div class="photos">
+                <img src="./Photos/about-1.jpg" alt="photo">
+                <div class="tog">
+                    <img src="./Photos/about-2.jpg" alt="photo">
+                    <img src="./Photos/about-3.jpg" alt="photo">
+                </div>
+            </div>
+
         </div>
     </div>
     <!-- End About -->
