Added the Services Section and new comp

--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
         <div class="ads">
             <div class="title">
                 <h4>Going for a vacation?</h4>
-                <h1>Book For <span>Your Pet</span></h1>
-                <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
-
+                <h1><span>Book For</span> Your Pet</h1>
             </div>
+            <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
             <div class="ads-content">
                 <div class="ad">
                     <div class="label">
@@ -198,6 +197,60 @@
         </div>
     </div>
     <!-- End About -->
+    <!-- Start Services -->
+    <div class="services">
+        <div class="container">
+            <div class="title">
+                <h4>Our Services</h4>
+                <h1>Premium <span>Pet Services</span></h1>
+            </div>
+            <div class="services-content">
+                <div class="service">
+                    <img src="./Photos/dog-house.png" alt="photo">
+                    <h3>Pet Boarding</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+                <div class="service">
+                    <img src="./Photos/pet-bowl.png" alt="photo">
+                    <h3>Pet Feeding</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+                <div class="service">
+                    <img src="./Photos/grooming.png" alt="photo">
+                    <h3>Pet Grooming</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+                <div class="service">
+                    <img src="./Photos/cat.png" alt="photo">
+                    <h3>Per Training</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+                <div class="service">
+                    <img src="./Photos/dog.png" alt="photo">
+                    <h3>Pet Exercise</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+                <div class="service">
+                    <img src="./Photos/vaccine.png" alt="photo">
+                    <h3>Pet Treatment</h3>
+                    <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos,
+                        rebum sit vero stet ipsum justo</p>
+                    <a href="#">read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
 </body>
 
 </html>
