Added the choose us section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,39 @@
         </div>
     </div>
     <!-- End Services -->
+    <!-- Start Choose -->
+    <div class="choose">
+        <div class="container">
+            <img src="./Photos/feature.jpg" alt="photo">
+            <div class="choose-text">
+                <div class="title">
+                    <h4>Why Choose Us?</h4>
+                    <h1>Special Care <span>On Pets</span></h1>
+                </div>
+                <p>Dolor lorem lorem ipsum sit et ipsum. Sadip sea amet diam sed ut vero no sit. Et elitr stet sed sit
+                    sed kasd. Erat duo eos et erat sed diam duo</p>
+                <div class="features">
+                    <div class="feature">
+                        <img src="./Photos/cat.png" alt="cat">
+                        <h5>Best In Industry</h5>
+                    </div>
+                    <div class="feature">
+                        <img src="./Photos/doctor.png" alt="doctor">
+                        <h5>Emergency Services</h5>
+                    </div>
+                    <div class="feature">
+                        <img src="./Photos/healthcare.png" alt="health">
+                        <h5>Special Care</h5>
+                    </div>
+                    <div class="feature">
+                        <img src="./Photos/dog.png" alt="dog">
+                        <h5>Customer Support</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Choose -->
 </body>
 
 </html>
