Added The Pricing Section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <ul>
             <li><a href="#" class="active">home</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="#">service</a></li>
-            <li><a href="#">price</a></li>
+            <li><a href="#services">service</a></li>
+            <li><a href="#pricing">price</a></li>
             <li><a href="#booking">booking</a></li>
             <li><a href="#">pages</a></li>
             <li><a href="#">contact</a></li>
@@ -198,7 +198,7 @@
     </div>
     <!-- End About -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <div class="title">
                 <h4>Our Services</h4>
@@ -284,6 +284,68 @@
         </div>
     </div>
     <!-- End Choose -->
+    <!-- Start Pricing -->
+    <div class="pricing" id="pricing">
+        <div class="container">
+            <div class="title">
+                <h4>Pricing Plan</h4>
+                <h1><span>Choose the</span> Best Price</h1>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <div class="image">
+                        <img src="./Photos/price-1.jpg" alt="photo">
+                        <div class="text">
+                            <h3>Basic</h3>
+                            <h1>49</h1>
+                        </div>
+                    </div>
+                    <ul>
+                        <li><span>Feeding</span></li>
+                        <li><span>Broading</span></li>
+                        <li><span class="w">Spa & Grooming</span></li>
+                        <li><span class="w">Veterinary Medicine</span></li>
+                    </ul>
+                    <a href="#">Sign Up Now</a>
+                </div>
+                <div class="plan">
+                    <div class="image">
+                        <img src="./Photos/price-2.jpg" alt="photo">
+                        <div class="text">
+                            <h3 class="sp">Standard</h3>
+                            <h1>99</h1>
+
+                        </div>
+                    </div>
+                    <ul>
+                        <li><span>Feeding</span></li>
+                        <li><span>Broading</span></li>
+                        <li><span>Spa & Grooming</span></li>
+                        <li><span class="w">Veterinary Medicine</span></li>
+                    </ul>
+                    <a href="#" class="sp">Sign Up Now</a>
+                </div>
+                <div class="plan">
+                    <div class="image">
+                        <img src="./Photos/price-3.jpg" alt="photo">
+                        <div class="text">
+                            <h3>Premium</h3>
+                            <h1>149</h1>
+
+                        </div>
+                    </div>
+                    <ul>
+                        <li><span>Feeding</span></li>
+                        <li><span>Broading</span></li>
+                        <li><span>Spa & Grooming</span></li>
+                        <li><span>Veterinary Medicine</span></li>
+                    </ul>
+                    <a href="#">Sign Up Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Pricing -->
 </body>
 
 </html>
