Added the Team Section

--- a/index.html
+++ b/index.html
@@ -346,6 +346,70 @@
         </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Team -->
+    <div class="team">
+        <div class="container">
+            <div class="title">
+                <h4>Team Member</h4>
+                <h1><span>Meet Our</span> Team Member</h1>
+            </div>
+            <div class="team-content">
+                <div class="card">
+                    <img src="./Photos/team-1.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Mollie Ross</h5>
+                        <span>Founder & CEO</span>
+                    </div>
+                    <div class="socials">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Photos/team-2.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Jennifer Page</h5>
+                        <span>Chef Executive</span>
+                    </div>
+                    <div class="socials">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Photos/team-3.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Kate Glover</h5>
+                        <span>Doctor</span>
+                    </div>
+                    <div class="socials">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Photos/team-4.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Lilly Fry</h5>
+                        <span>Trainer</span>
+                    </div>
+                    <div class="socials">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Team -->
 </body>
 
 </html>
