Added the testimonial Section

--- a/index.html
+++ b/index.html
@@ -410,6 +410,51 @@
         </div>
     </div>
     <!-- End Team -->
+    <!-- Start Testimonial -->
+    <div class="testimonial">
+        <div class="container">
+            <div class="title">
+                <h4>Testimonial</h4>
+                <h1><span>Our Client</span> Says</h1>
+            </div>
+            <div class="test-content">
+                <div class="client">
+                    <img src="./Photos/testimonial-1.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Client Name</h5>
+                        <span>Profession</span>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor
+                        ipsum sanct clita</p>
+                </div>
+                <div class="client">
+                    <img src="./Photos/testimonial-2.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Client Name</h5>
+                        <span>Profession</span>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor
+                        ipsum sanct clita</p>
+                </div>
+                <div class="client">
+                    <img src="./Photos/testimonial-3.jpg" alt="photo">
+                    <div class="name">
+                        <h5>Client Name</h5>
+                        <span>Profession</span>
+                    </div>
+                    <p>Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor
+                        ipsum sanct clita</p>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="active"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimonial -->
 </body>
 
 </html>
