Added the Blog Section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li><a href="#services">service</a></li>
             <li><a href="#pricing">price</a></li>
             <li><a href="#booking">booking</a></li>
-            <li><a href="#">pages</a></li>
+            <li><a href="#blog">pages</a></li>
             <li><a href="#">contact</a></li>
         </ul>
         <button>get quote</button>
@@ -455,6 +455,72 @@
         </div>
     </div>
     <!-- End Testimonial -->
+    <!-- Start Blog -->
+    <div class="blog" id="blog">
+        <div class="container">
+            <div class="title">
+                <h4>Pet Blog</h4>
+                <h1>Updates <span>From Blog</span></h1>
+            </div>
+            <div class="blog-content">
+                <div class="card">
+                    <img src="./Photos/blog-1.jpg" alt="Photo">
+                    <div class="text">
+                        <h4>Diam amet eos at no eos</h4>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum
+                            sit vero stet justo</p>
+                        <a href="#">read more</a>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Photos/blog-2.jpg" alt="Photo">
+                    <div class="text">
+                        <h4>Diam amet eos at no eos</h4>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum
+                            sit vero stet justo</p>
+                        <a href="#">read more</a>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Photos/blog-3.jpg" alt="Photo">
+                    <div class="text">
+                        <h4>Diam amet eos at no eos</h4>
+                        <div class="icons">
+                            <i class="fa-solid fa-user"></i>
+                            <span>Admin</span>
+                            <i class="fa-solid fa-folder"></i>
+                            <span>Web Design</span>
+                            <i class="fa-solid fa-comments"></i>
+                            <span>15</span>
+                        </div>
+                        <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est diam eos, rebum
+                            sit vero stet justo</p>
+                        <a href="#">read more</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Blog -->
 </body>
 
 </html>
