--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
     <!-- End Working Hours -->
     <!-- Start Header -->
-    <header>
+    <header id="header">
         <ul>
             <li><a href="#" class="active">home</a></li>
             <li><a href="#about">about</a></li>
@@ -347,7 +347,7 @@
     </div>
     <!-- End Pricing -->
     <!-- Start Team -->
-    <div class="team">
+    <div class="team" id="team">
         <div class="container">
             <div class="title">
                 <h4>Team Member</h4>
@@ -521,6 +521,53 @@
         </div>
     </div>
     <!-- End Blog -->
+    <!-- Start Contact -->
+    <div class="contact">
+        <div class="main">
+            <h1><span>Pet</span> Lover</h1>
+            <p>Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup amet ea sanct
+                ipsum, dolore vero lorem no duo eirmod. Eirmod amet ipsum no ipsum lorem clita ut. Ut sed sit lorem
+                ea lorem sed, amet stet sit sea ea diam tempor kasd kasd. Diam nonumy etsit tempor ut sed diam sed
+                et ea</p>
+        </div>
+        <div class="lists">
+            <div class="list">
+                <h5>Get In Touch</h5>
+                <ul>
+                    <li><i class="fa-solid fa-location-dot"></i> 123 Street, New York, USA</li>
+                    <li><i class="fa-solid fa-phone"></i> <a href="tel:+201064533093">+201064533093</a></li>
+                    <li><i class="fa-solid fa-envelope"></i><a
+                            href="mailto:anasabdalla99@gmail.com">info@example.com</a></li>
+                </ul>
+                <div class="socials">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+            <div class="list pop">
+                <h5>Popular Links</h5>
+                <ul>
+                    <li><a href="#header">home</a></li>
+                    <li><a href="#about">about us</a></li>
+                    <li><a href="#services">our services</a></li>
+                    <li><a href="#team">our team</a></li>
+                    <li><a href="#">contact us</a></li>
+                </ul>
+            </div>
+            <div class="list form">
+                <h5>Newsletter</h5>
+                <form action="">
+                    <input type="text" name="name" placeholder="Your Name">
+                    <input type="email" name="email" placeholder="Your Email">
+                    <input type="submit" value="Submit Now">
+                </form>
+            </div>
+
+        </div>
+    </div>
+    <!-- End Contact -->
 </body>
 
 </html>
