Added the footer section

--- a/index.html
+++ b/index.html
@@ -568,6 +568,17 @@
         </div>
     </div>
     <!-- End Contact -->
+    <!-- Start Footer -->
+    <footer>
+        <p>&#169; <span>Your Site Name</span>All Rights Reserved. Designed by <span>HTML Codex</span></p>
+        <div class="links">
+            <a href="#">privacy</a>
+            <a href="#">terms</a>
+            <a href="#">FAQs</a>
+            <a href="#">help</a>
+        </div>
+    </footer>
+    <!-- End Footer -->
 </body>
 
 </html>
