Added the Scroll and last Edits

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li><a href="#pricing">price</a></li>
             <li><a href="#booking">booking</a></li>
             <li><a href="#blog">pages</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
         <button>get quote</button>
         <h1>Safety<span>First</span></h1>
@@ -522,7 +522,7 @@
     </div>
     <!-- End Blog -->
     <!-- Start Contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="main">
             <h1><span>Pet</span> Lover</h1>
             <p>Ipsum amet sed vero et lorem stet eos ut, labore sed sed stet sea est ipsum ut. Volup amet ea sanct
@@ -579,6 +579,9 @@
         </div>
     </footer>
     <!-- End Footer -->
+    <!-- Start Scroll -->
+    <a href="#" class="scroll"><i class="fa-solid fa-angles-up"></i></a>
+    <!-- End Scroll -->
 </body>
 
 </html>
