Fixed the Icons

--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
                         <span>Founder & CEO</span>
                     </div>
                     <div class="socials">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
-                        <i class="fa-brands fa-instagram"></i>
+                        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                        <div class="icon"> <i class="fa-brands fa-facebook-f"></i></div>
+                        <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
                     </div>
                 </div>
                 <div class="card">
@@ -374,10 +374,10 @@
                         <span>Chef Executive</span>
                     </div>
                     <div class="socials">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
-                        <i class="fa-brands fa-instagram"></i>
+                        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                        <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+                        <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
                     </div>
                 </div>
                 <div class="card">
@@ -387,10 +387,10 @@
                         <span>Doctor</span>
                     </div>
                     <div class="socials">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
-                        <i class="fa-brands fa-instagram"></i>
+                        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                        <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+                        <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
                     </div>
                 </div>
                 <div class="card">
@@ -400,10 +400,10 @@
                         <span>Trainer</span>
                     </div>
                     <div class="socials">
-                        <i class="fa-brands fa-twitter"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
-                        <i class="fa-brands fa-instagram"></i>
+                        <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                        <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+                        <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                        <div class="icon"><i class="fa-brands fa-instagram"></i></div>
                     </div>
                 </div>
             </div>
@@ -540,10 +540,10 @@
                             href="mailto:anasabdalla99@gmail.com">info@example.com</a></li>
                 </ul>
                 <div class="socials">
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
-                    <i class="fa-brands fa-instagram"></i>
+                    <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+                    <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+                    <div class="icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                    <div class="icon"><i class="fa-brands fa-instagram"></i></div>
                 </div>
             </div>
             <div class="list pop">
